# miscord-csharp

./: .env.example  ACCOUNT_PLAN.md  AGENTS.md  CAPTURE_PLAN.md  CHANNELS_PLAN.md  CONTROLLER_STREAMING_PLAN.md  DEVELOPMENT.md  DRAWING_PLAN.md  Dockerfile  Miscord.sln  PLAN.md  README.md  SECURITY_PLAN.md  Snacka.sln  TEXT_PLAN.md  THREADS_PLAN.md  VOICE_PLAN.md  dev-backend.sh  dev-clients.sh  dev-login.sh  dev-start.sh  docker-compose.dev.yml  docker-compose.yml  run-client.sh  turnserver.conf
.github/workflows/: build-client.yml  build-server.yml  test-audio-enum.yml
docs/: AVALONIA_NOTES.md  DEPLOY.md  DRAWING.md  SCREEN_CAPTURE_PROTOCOL.md
docs/features/: gaming-stations.md
docs/hardware-video/: LINUX_IMPLEMENTATION.md  README.md  WINDOWS_IMPLEMENTATION.md
src/Miscord.Client/: App.axaml  App.axaml.cs  AudioTest.cs  Miscord.Client.csproj  Program.cs
src/Miscord.Client/Controls/: ChannelListView.axaml  ChannelListView.axaml.cs  ChatAreaView.axaml  ChatAreaView.axaml.cs  CommunityListView.axaml  DMContentView.axaml  DMContentView.axaml.cs  GifPreview.cs  LinkPreviewCard.cs  MarkdownTextBlock.cs  MembersListView.axaml  MembersListView.axaml.cs  MessageContentBlock.cs  MessageItemView.axaml  MessageItemView.axaml.cs  MessageSearchContent.axaml  MessageSearchContent.axaml.cs  ThreadPanelView.axaml  UserPanelView.axaml  VoiceChannelContentView.axaml
src/Miscord.Server/: Miscord.Server.csproj  Program.cs  appsettings.json  miscord.db
src/Miscord.WebRTC/: Miscord.WebRTC.csproj
src/MiscordCapture/: Package.swift
src/Snacka.Client/: App.axaml  App.axaml.cs  AudioTest.cs  Program.cs  Snacka.Client.csproj  app.manifest
src/Snacka.Server/: Program.cs  Snacka.Server.csproj  appsettings.Production.json  appsettings.json
src/Snacka.Shared/: Class1.cs
src/Snacka.WebRTC/: Class1.cs  Snacka.WebRTC.csproj
src/SnackaCapture/: Package.swift
src/SnackaCaptureLinux/: CMakeLists.txt
src/SnackaCaptureVideoToolbox/: Package.swift
src/SnackaCaptureWindows/: CMakeLists.txt
src/SnackaLinuxRenderer/: CMakeLists.txt
src/SnackaLinuxRenderer/src/: capi.c  capi.h  egl_renderer.c  egl_renderer.h  vaapi_decoder.c  vaapi_decoder.h  x11_window.c  x11_window.h
src/SnackaMetalRenderer/: Package.swift
src/SnackaWindowsRenderer/: CMakeLists.txt
src/SnackaWindowsRenderer/src/: CApi.cpp  CApi.h  D3D11Renderer.cpp  D3D11Renderer.h  MediaFoundationDecoder.cpp  MediaFoundationDecoder.h
tests/Miscord.Client.Tests/: DMContentViewModelTests.cs  MembersListViewModelTests.cs  Miscord.Client.Tests.csproj  TestApp.axaml  TestApp.axaml.cs  TestAppBuilder.cs  VoiceChannelCreationTests.cs
tests/Miscord.Server.Tests/: IntegrationTestBase.cs  Miscord.Server.Tests.csproj  TestDbContextFactory.cs
tests/Miscord.WebRTC.Tests/: Miscord.WebRTC.Tests.csproj
tests/Snacka.Client.Tests/: DMContentViewModelTests.cs  MembersListViewModelTests.cs  Snacka.Client.Tests.csproj  TestApp.axaml  TestApp.axaml.cs  TestAppBuilder.cs  VoiceChannelCreationTests.cs
tests/Snacka.Client.UnitTests/: Snacka.Client.UnitTests.csproj  TestExtensions.cs
tests/Snacka.Server.Tests/: IntegrationTestBase.cs  Snacka.Server.Tests.csproj  TestDbContextFactory.cs
tests/Snacka.WebRTC.Tests/: Snacka.WebRTC.Tests.csproj  Test1.cs
tools/AudioEnumTest/: AudioEnumTest.csproj  Program.cs
tools/VideoEncoderTest/: Program.cs  VideoEncoderTest.csproj
(+542 files in other folders)
